# -

./: .env.example  .gitignore  README.md
arb-bot/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
arb-bot/app/: __init__.py  binance_client.py  config.py  execution_slippage.py  gold_v2_version.py  history.py  live_reconcile.py  logger.py  main.py  market_calendar.py  models.py  mt4_bridge.py  mt4_costs.py  mt4_rollover.py  quote_guard.py  risk.py  storage.py  strategy.py  v2_add.py  v2_common.py  v2_executor.py  v2_planner.py  v2_support.py  v2_tuning.py
arb-bot/deploy/: gold-v2-monitor.service  nginx-xau-arb-location.conf  xau-arb-bot.service
arb-bot/mt4/: ArbBridgeEA.mq4
arb-bot/scripts/: install_windows_task.ps1  monitor_gold_v2.py  run.ps1
arb-bot/tests/: test_binance_client.py  test_config.py  test_execution_slippage.py  test_history.py  test_live_reconcile.py  test_main_metrics.py  test_market_calendar.py  test_monitor_gold_v2.py  test_mt4_bridge.py  test_mt4_costs.py  test_mt4_rollover.py  test_quote_guard.py  test_risk.py  test_strategy.py  test_v2_executor.py  test_v2_exit_spread_guard.py  test_v2_planner.py  test_v2_tuning.py
arb-bot/web/: index.html
backend/: requirements.txt
backend/app/: __init__.py  main.py
config/: mt4_symbols.example.json  settings.example.json
deploy/: docker-compose.yml  nginx-alpha-alert-domain.conf  nginx-alpha-alert-location.conf  publish-frontend.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
mt4/: PerpArbMt4Bridge.mq4  README.md
(+110 files in other folders)
